@@ -19,7 +19,7 @@
 
 #include <errno.h>
 #include <limits.h>
-#include <stdlib.h>
+#include <bsd_stdlib.h>
 
 #define	INVALID		1
 #define	TOOSMALL	2
