@@ -18,7 +18,7 @@
 #include <libgen.h>
 #include <limits.h>
 #include <stdio.h>
-#include <stdlib.h>
+#include <bsd_stdlib.h>
 #include <bsd_string.h>
 
 #include "../common/common.h"
